# AGT_jcore_ai_agent

./: .gitignore  FOUNDATION.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt
config/: nodes.yaml
config/profiles/: jason.yaml  jennifer.yaml  kiera.yaml  pepper.yaml  scarlet.yaml
config/souls/: family_protocol.md  jason.md  jennifer.md  kiera.md  pepper.md  scarlet.md
core/: __init__.py  agent.py  api_usage.py  backup_status.py  control_plane.py  llm.py  policy.py  profile.py  sandbox.py  soul.py  telegram_bot.py
core/approval/: engine.py
core/health/: __init__.py  server.py
core/interop/: __init__.py  bridge.py  identity.py
core/memory/: embedding_service.py  engine.py  episodic_memory.py  profile_memory.py  project_memory.py  transcript_memory.py  vector_memory.py
core/skills/: manifest.py  package.py
core/tools/: __init__.py  base.py  delegate_node_task_tool.py  get_time_tool.py  idea_search_tool.py  math_tool.py  registry.py  request_email_tool.py  runtime_diagnostics_tool.py  sandbox_list_tool.py  sandbox_read_text_tool.py
docs/: ECOSYSTEM_SUMMARY.md  FAMILY_NETWORK.md
launchagents/: com.familyagent.core.plist
release_notes/: jennifer.txt  kiera.txt  pepper.txt
scripts/: add_node.sh  backup_code.sh  backup_data.sh  bootstrap.sh  deploy.sh  deploy_all.sh  install_backup_cron.sh  install_deploy_key.sh  notify_agent_user.sh  push_llm_key_to_node.sh  setup_github_backup.sh  start_agent.sh  stop_agent.sh
skills/: __init__.py
skills/builders/: __init__.py
tests/: test_interop_bridge.py  test_skill_manifest.py
(+4 files in other folders)
